--- a/style.css
+++ b/style.css
@@ -1,106 +1,67 @@
-.wrapper {
-    display: flex;
-    justify-content: space-between;
+body {
+  background: #fff;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 16px;
 }
 
-.left {
-    flex-basis: 70%;
-    max-width: 700px;
+input,
+button {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 700;
 }
 
-.right {
-    flex-basis: 30%;
+.main-div,
+.loggedin-div {
+  width: 20%;
+  margin: 0px auto;
+  margin-top: 150px;
+  padding: 20px;
+  display: none;
 }
 
-textarea {
-    vertical-align: top;
-    resize: none;
+.main-div input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 15px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
 }
 
-
-.collapsible {
-    background-color: #777;
-    color: white;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
+.main-div input:focus {
+  border: 1px solid #777;
 }
 
-.active,
-.collapsible:hover {
-    background-color: #555;
+.main-div button,
+.loggedin-div button {
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  border-radius: 5px;
+  padding: 15px;
+  display: block;
+  width: 100%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
 }
 
-.content {
-    padding: 18px 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
-}
-
-label {
-    display: block;
-}
-
-textarea {
-    margin-bottom: 10px;
+.main-div button:hover,
+.loggedin-div button:hover {
+  background: #fff;
+  color: #5d8ffc;
+  border: 1px solid #5d8ffc;
+  cursor: pointer;
 }
 
 .delbtn {
-    float: right;
-}
-
-.cndbtn {
-    float: right;
-}
-
-
-
-/* Test */
-body.dragging,
-body.dragging * {
-    cursor: move !important;
-}
-
-.dragged {
-    position: absolute;
-    opacity: 0.5;
-    z-index: 2000;
-}
-
-ol.example li {
-    cursor: pointer;
-    display: block;
-    margin: 5px;
-    padding: 5px;
-    border: 1px solid #cccccc;
-    color: #0088cc;
-    background: #eeeeee;
-}
-
-ol {
-    list-style-type: none;
-    counter-reset: item;
-}
-
-ol>li {
-    counter-increment: item;
-    margin-bottom: 0.6em;
-}
-
-ol>li:before {
-    content: counters(item, ".") ". ";
-    padding-right: 0.6em;
-}
-
-li ol>li {
-    margin: 0;
-}
-
-li ol>li:before {
-    content: counters(item, ".") " ";
+  float: right;
+  cursor: pointer;
 }
