--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ button {
 
 .main-container {
 	width: 60vw;
-	max-width: 1;
+	max-width: 700px;
 	padding: 24px;
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
