--- a/formbuilder/edit.css
+++ b/formbuilder/edit.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -35,7 +39,7 @@ p {
   background-color: white;
   color: #3a3a3a;
   padding: 8px 0 8px 0;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: row;
