--- a/formbuilder/edit.css
+++ b/formbuilder/edit.css
@@ -49,7 +49,13 @@ p {
 }
 
 .header h1 {
+  padding: 4px;
   font-size: 20px;
+  font-weight: 600;
+}
+
+.header h1:hover{
+  border: 1px solid lightgrey;
 }
 
 .header button {
@@ -146,9 +152,14 @@ i {
 }
 
 /* Add Child */
+/**************************************/
 
 .add-child {
-  margin-top: 12px;
+  opacity: 0;
+  position: absolute;
+  z-index: 3;
+  margin-top: -32px;
+  margin-left: 8px;
   background-color: transparent;
   display: flex;
   flex-direction: row;
@@ -156,6 +167,11 @@ i {
   align-items: flex-start;
   width: auto;
 }
+
+.question-view:hover + .add-child, .add-child:hover{
+  opacity: 1;
+}
+
 
 .child-btn {
   height: 36px;
@@ -178,11 +194,6 @@ i {
   transition: 0.3s;
 }
 
-.child-btn:after {
-  background-color: #3cb3e0;
-  color: white;
-}
-
 .child-btn:focus {
   outline: none;
 }
@@ -198,8 +209,6 @@ i {
   position: relative;
   margin-left: 16px;
   padding: 8px;
-  /* width: 150px;
-  height: auto; */
   background: #ffffff;
   border: 0.5px solid #efefef;
   box-sizing: border-box;
@@ -242,6 +251,9 @@ i {
 .tab {
   margin-bottom: 32px;
   width: 300px;
+  display: flex;
+  flex: row;
+  justify-content: space-around;
 }
 
 .tablinks {
