--- a/formbuilder/edit.css
+++ b/formbuilder/edit.css
@@ -20,17 +20,6 @@ p {
   line-height: 19px;
 }
 
-.oh-blue {
-  color: #3cb3e0;
-}
-
-.oh-blue-bg {
-  background-color: #3cb3e0;
-}
-
-.spacer {
-  height: 50px;
-}
 
 /*Header*/
 /**************************************/
@@ -85,12 +74,16 @@ p {
   padding-right: 3vw;
 }
 
-#save-time {
-  font-size: 14px;
+#lastSaved {
+  font-size: 12px;
   font-weight: normal;
   color: grey;
   font-family: "Open Sans";
+  position: absolute; 
+  left: 100%; 
+  white-space: pre;
 }
+
 
 /*Buttons*/
 /**************************************/
@@ -429,6 +422,10 @@ textarea::placeholder {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.edit-buttons .solid-btn{
+  margin-left: 8px;
 }
 
 .child {
