--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
 body {
-	background-color: #FAFAFA;
+	margin: 0;
+	padding: 0;
+	background-color: #fafafa;
 	display: flex;
-	justify-content: center;
-	font-family: "Roboto";
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	font-family: "Open Sans";
+}
+
+input{
+	height: 24px;
+	font-size: 14px;
+	margin-bottom: 16px;
+	padding: 8px;
+	width: 300PX;
+	border: 1px solid lightgrey;
+	border-radius: 4px;
+	background-color: white;
 }
 
 p {
@@ -17,9 +32,27 @@ h1 {
 }
 
 button {
-	width: 100px;
-	height: 40px;
+	padding: 8px 12px 8px 12px;
+	min-width: 100px;
+	height: 44px;
+	font-size: 14px;
+	line-height: 16px;
+	text-align: center;
 	border: none;
+	border-radius: 4px;
+	font-weight: 600;
+	font-family: "Open Sans";
+	transition-duration: 0.1s;
+  }
+
+.solid-btn{
+	background-color: #3cb3e0;
+	color: white;
+}
+
+.solid-btn:hover{
+	cursor: pointer;
+	background-color: #3197bd;
 }
 
 
@@ -41,6 +74,26 @@ button {
 	width: 100%
 }
 
+/* LOGGED OUT */
+/* ***************************** */
+
+#logged-out img{
+	width: 200px;
+}
+
+#logged-out h4{
+	font-weight: 400;
+	margin-bottom: 64px;
+}
+
+i {
+	margin-right: 8px;
+  }
+  
+
+/* LOGGED IN */
+/* ***************************** */
+
 .form-list {
 	width: 100%;
 }
@@ -55,9 +108,13 @@ button {
 	padding: 8px 0px 8px 0px;
 }
 
+.form-list-head p{
+	font-weight: 600;
+}
+
 
 .form-list-head button {
-	background-color: #5894F1;
+	background-color: #3cb3e0;
 	color: white;
 	cursor: pointer;
 }
@@ -72,6 +129,16 @@ button {
 	margin-top: 8px;
 }
 
+.form-list-item:hover{
+	cursor: pointer;
+	background-color: #e1e1e1;
+}
+
+.form-list-item a{
+	color: black;
+	text-decoration: none;
+}
+
 
 .form-list-item .del {
 	cursor: pointer;
@@ -80,7 +147,12 @@ button {
 
 
 .log-out {
-	background: #F0F0F0;
-	border: 1px solid #DADADA;
+	color: #8e8e8e;
+	background: none;
 	cursor: pointer;
+}
+
+.log-out:hover{
+	color: black;
+	text-decoration: underline;
 }
