created child views

--- a/formbuilder/edit.css
+++ b/formbuilder/edit.css
@@ -16,7 +16,7 @@ body {
 p {
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 19px;
 }
 
@@ -127,6 +127,11 @@ button:disabled {
   color: #b1b1b1;
 }
 
+.outlined-btn:hover {
+  background: #b1b1b1;
+  color: white;
+}
+
 .red {
   background-color: #ff6864;
 }
@@ -135,16 +140,11 @@ button:disabled {
   background-color: #db5a57;
 }
 
-.outlined-btn:hover {
-  background: #b1b1b1;
-  color: white;
-}
-
 i {
   margin-right: 8px;
 }
 
-/* Add Child */
+/* Add Child Button */
 /**************************************/
 
 .add-child {
@@ -294,7 +294,7 @@ i {
   position: relative;
   margin: 24px 0;
   margin-bottom: 12px;
-  padding: 16px;
+  padding: 16px 16px 32px 16px;
   background-color: #f0f0f0;
   border-radius: 4px;
 }
@@ -321,11 +321,9 @@ i {
   cursor: pointer;
 }
 
-
 .hidden{
   display: none;
 }
-
 
 /*Text Answer*/
 /**************************************/
@@ -424,20 +422,30 @@ textarea::placeholder {
   justify-content: space-between;
 }
 
-.edit-buttons .solid-btn{
-  margin-left: 8px;
+.edit-buttons .outline-btn{
+  margin-right: 8px;
 }
 
-.child {
-  border: 1px solid black;
-}
 
-.child span {
-  font-weight: 800;
-}
+/* Child Questions */
+/**************************************/
 
-.condition {
-  margin-top: -8px;
-  margin-bottom: 24px;
+.child-condition{
   font-size: 12px;
+  margin-bottom: 24px;
 }
+
+.child-condition span{
+  font-weight: 600;
+}
+
+.child-condition-select{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.child-condition-select p{
+  color: black;
+}
+
