updated working group view, opt out functionality fixed

--- a/homework/style.css
+++ b/homework/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #fafafa;
+    background-color: #eee;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -18,7 +18,7 @@ h1 {
     margin-bottom: 0px;
 }
 
-#instructions{
+#instructions {
     margin-right: auto;
     margin-bottom: 32px;
 }
@@ -28,86 +28,121 @@ h1 {
     max-width: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding-top: 32px;
 }
 
 .question-container {
+    margin-top: 24px;
     display: flex;
     flex-direction: row;
     height: auto;
     width: 100%;
-    margin-bottom: 24px;
 }
 
-.left-container, .right-container{
+.child{
+    margin-top: 0px;
+}
+
+.left-container, .right-container {
     width: 50%;
-    
 }
 
 /* Left Container */
 /* ********************************* */
 
-.left-container{
+.left-container {
     display: block;
     padding: 8px 16px 8px 16px;
     background-color: #d8d8d8;
 }
 
-.left-container p{
+.left-container p {
     width: 75%;
 }
 
-.left-container label{
+.left-container label {
     display: block;
     margin-bottom: 8px;
 }
 
-.opt-out{
+.opt-out {
+    float: right; 
+    margin-top: 16px;
+}
+
+.label-text {
     width: 100px;
-    padding: 4px 0px 4px 0px;
+    padding: 4px 8px 4px 8px;
     background-color: white;
     border: 1px solid black;
     border-radius: 3px;
-    float: right;
-    margin: 16px 0 0 0;
+    cursor: pointer;
+    user-select: none;
     text-align: center;
 }
 
-.opt-out input{
-    margin-right: 8px;
+.opt-out input[type=checkbox] {
+    display: none;
 }
 
-.answer{
+.label-text::before{
+    font-family: FontAwesome;
+    font-weight: 900;
+}
+
+input[type=checkbox] +.label-text::before {
+    content: "\f096";
+}
+
+input[type=checkbox]:checked + .label-text::before{
+    content: "\f14a";
+}
+
+input[type=checkbox]:checked + .label-text{
+    color: #3cb3e0;
+    border: 1px solid #3cb3e0;
+}
+
+.answer {
     font-size: 12px;
     color: gray;
+    cursor: not-allowed;
 }
-
 
 /* Right Container */
 /* ********************************* */
 
-.right-container{
+.right-container {
     background-color: white;
     display: flex;
     flex-direction: row;
     padding: 8px;
 }
 
-.right-container p{
+.inactive {
+    background-color: #d8d8d8;
+    color: gray;
+}
+
+.inactive input {
+    pointer-events: none;
+}
+
+.right-container p {
     font-weight: 600;
 }
 
-.scores, .overall-score{
-    width: 50%;
+.clarity-relevance p, .overall-score p{
+    margin-top: 0;
 }
 
-.scores{
+
+.clarity-relevance {
+    width: 55%;
     text-align: center;
 }
 
-.scores{
+.clarity-relevance {
     border-right: 1px solid #DFDFDF;
     display: flex;
     flex-direction: column;
@@ -115,45 +150,40 @@ h1 {
     padding: 16px;
 }
 
-.clarity-score{
-    /* border: 1px solid lightcoral; */
+.clarity-score {
     margin-bottom: 24px;
 }
 
-.relevance-score{
-    /* border: 1px solid lightblue; */
-}
-
-.scale{
+.scale {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-end;
 }
 
-.scale label{
+.scale label {
     font-size: 12px;
 }
 
-.scale .score-label input{
+.scale .score-label input {
     display: block;
 }
 
-.overall-score{
-    /* border: 1px solid lightgreen; */
+.overall-score {
+    width: 45%;
     padding: 16px;
     text-align: left;
 }
 
-.overall-score p{
+.overall-score p {
     text-align: center;
 }
 
-.overall-score label{
+.overall-score label {
     display: block;
     margin-bottom: 8px;
 }
 
-.overall-score input{
+.overall-score input {
     margin-right: 8px;
 }
