--- a/homework/style.css
+++ b/homework/style.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 .main-container {
-    width: 80vw;
+    width: 70vw;
     max-width: 1000px;
     display: flex;
     flex-direction: column;
@@ -37,10 +37,7 @@ h1 {
     flex-direction: row;
     height: auto;
     width: 100%;
-}
-
-.child{
-    margin-top: 0px;
+    border-radius: 15px;
 }
 
 .left-container, .right-container {
@@ -106,6 +103,9 @@ input[type=checkbox]:checked + .label-text{
 .answer {
     font-size: 12px;
     color: gray;
+}
+
+.answer input{
     cursor: not-allowed;
 }
 
@@ -138,7 +138,7 @@ input[type=checkbox]:checked + .label-text{
 
 
 .clarity-relevance {
-    width: 55%;
+    width: 60%;
     text-align: center;
 }
 
@@ -170,9 +170,10 @@ input[type=checkbox]:checked + .label-text{
 }
 
 .overall-score {
-    width: 45%;
+    width: 40%;
     padding: 16px;
     text-align: left;
+    position: relative;
 }
 
 .overall-score p {
@@ -187,3 +188,119 @@ input[type=checkbox]:checked + .label-text{
 .overall-score input {
     margin-right: 8px;
 }
+
+
+/* Progress Bar */
+/* *************************** */
+
+.progress{
+    height: auto;
+    width: 120px;
+    padding: 4px 16px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: fixed;
+    left: 0;
+    top: 200px;
+}
+
+#progress-txt{
+    color: black;
+    font-weight: 600;
+}
+
+.text{
+    color: #6a6a6a;
+    font-weight: 400;
+}
+
+.numbers{
+    font-weight: 600;
+}
+
+
+/* Comment Icon */
+/* *************************** */
+
+.comment{
+    width: 36px;
+    height: 36px;
+    border-radius: 18px;
+    position: absolute;
+    right: -24px;
+    top: 40%;
+    background-color: white;
+    border: 1px solid #efefef;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.comment a{
+   color: black;
+}
+
+.comment a:hover{
+    color: #3cb3e0;
+}
+
+.comment-box{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    padding: 16px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    position: relative;
+}
+
+.comment-box i{
+    position: absolute;
+    float: right;
+    top: 16px;
+    right: 16px;
+}
+
+.comment-box p{
+    margin-top: 0;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.comment-box input{
+    height: 32px;
+    border-radius: 4px;
+    font-size: 12px;
+    border: 1px solid #c9c9c9;
+    box-sizing: border-box;
+    padding-left: 8px;
+}
+
+.comment-buttons{
+    align-self: flex-end;
+}
+
+.comment-buttons button{
+    font-weight: 500;
+    margin-top: 16px;
+    background-color: transparent;
+    border: none;
+    font-size: 12px;
+    color: grey;
+    cursor: pointer;
+}
+
+.main-btn:hover{
+    color: #3cb3e0;
+}
+
+.secondary-btn:hover{
+    color: black;
+}
+
