--- a/homework/style.css
+++ b/homework/style.css
@@ -45,6 +45,28 @@ h1 {
     width: 50%;
 }
 
+  .submit-btn {
+    padding: 8px 12px 8px 12px;
+    width: 100px;
+    height: 44px;
+    margin-top: 24px;
+    align-self: center;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
+    font-family: "Open Sans";
+    transition-duration: 0.1s;
+    color: white;
+    background-color: #3cb3e0;
+  }
+  
+  .submit-btn:hover {
+    background-color: #3197bd;
+  }
+
 /* Left Container */
 /* ********************************* */
 
@@ -123,6 +145,7 @@ input[type=checkbox]:checked + .label-text{
 .inactive {
     background-color: #d8d8d8;
     color: gray;
+    pointer-events: none;
 }
 
 .inactive input {
@@ -237,44 +260,33 @@ input[type=checkbox]:checked + .label-text{
     justify-content: space-between;
 }
 
-.comment-icon{
-    width: 96px;
-    padding: 0px 8px;;
+.comment-btn{
+    width: 112px;
+    padding: 4px 12px;;
     height: 36px;
     border-radius: 4px;
+    font-size: 14px;
+    font-weight: 600;
     color: black;
     background-color: white;
     border: 1px solid  #efefef;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    font-size: 20px;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Open Sans";
 }
 
-.comment-icon.active{
-    background-color: #efefef;
-}
-
-.comment-icon.active a{
+.comment-btn.active{
     color: #3cb3e0;
 }
 
-
-.comment-icon i{
+.comment-btn i{
     margin-right: 8px;
 }
 
-.comment-icon a{
-    color: black;
-    font-size: 14px;
-    font-weight: 600;
-    text-decoration: none;
-    text-align: center;
-}
-
-.comment-icon a:hover{
+.comment-btn:hover{
     color: #3cb3e0;
     cursor: pointer;
 }
@@ -329,6 +341,11 @@ input[type=checkbox]:checked + .label-text{
 .main-btn{
     background-color: #3cb3e0;
     color: white;
+    border: none;
+}
+
+.main-btn:hover{
+    background-color: #3197bd;
 }
 
 .secondary-btn:hover{
@@ -336,3 +353,6 @@ input[type=checkbox]:checked + .label-text{
     color: black;
 } 
 
+.hidden{
+    display: none;
+}
