--- a/homework/style.css
+++ b/homework/style.css
@@ -9,6 +9,7 @@ body {
     font-family: "Open Sans";
     font-size: 14px;
     line-height: 21px;
+    padding-bottom: 32px;;
 }
 
 h1 {
@@ -45,9 +46,10 @@ h1 {
     width: 50%;
 }
 
-  .submit-btn {
+.submit-btn {
     padding: 8px 12px 8px 12px;
-    width: 100px;
+    min-width: 100px;
+    width: auto;
     height: 44px;
     margin-top: 24px;
     align-self: center;
@@ -65,6 +67,7 @@ h1 {
   
   .submit-btn:hover {
     background-color: #3197bd;
+    cursor: pointer;
   }
 
 /* Left Container */
@@ -72,8 +75,10 @@ h1 {
 
 .left-container {
     display: block;
-    padding: 8px 16px 8px 16px;
+    padding: 16px 16px 8px 16px;
     background-color: #d8d8d8;
+    color: grey;
+    line-height: 32px;
 }
 
 .left-container p {
@@ -85,16 +90,29 @@ h1 {
     margin-bottom: 8px;
 }
 
+.left-container input{
+    margin-right: 8px;
+}
+
+.left-container input[type="text"]{
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid grey;
+    width: 60%;
+}
+
 .opt-out {
     float: right; 
-    margin-top: 16px;
+    margin-top: 0;
+    color: black;
+    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
 }
 
 .label-text {
     width: 100px;
     padding: 4px 8px 4px 8px;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 3px;
     cursor: pointer;
     user-select: none;
@@ -217,18 +235,23 @@ input[type=checkbox]:checked + .label-text{
 /* Progress Bar */
 /* *************************** */
 
-.progress{
+.progress-box{
     height: auto;
     width: 120px;
-    padding: 4px 16px;
+    padding: 4px 16px 16px 16px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 200px;
+}
+
+.progress{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    position: fixed;
-    left: 0;
-    top: 200px;
 }
 
 #progress-txt{
@@ -244,6 +267,35 @@ input[type=checkbox]:checked + .label-text{
 .numbers{
     font-weight: 600;
 }
+
+.save-btn{
+    height: 44px;
+    border-radius: 4px;
+    border-color: #3cb3e0;
+    color: white;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
+    font-family: "Open Sans";
+    transition-duration: 0.1s;
+    color: white;
+    background-color: #3cb3e0;
+}
+
+.save-btn:hover{
+    cursor: pointer;
+    background-color: #3197bd;
+}
+
+#lastSaved {
+    margin-top: 16px;
+    font-size: 12px;
+    font-weight: normal;
+    color: grey;
+  }
 
 
 /* Comment Icon */
