--- a/homework/style.css
+++ b/homework/style.css
@@ -24,9 +24,22 @@ h1 {
     margin-bottom: 32px;
 }
 
+.instructions-toggle{
+    font-weight: 600;
+    color: black;
+    text-decoration: none;
+}
+
+.instructions-toggle i{
+    margin-right: 8px;
+}
+
 .score-instructions{
-    background-color: white;
-    padding: 8px 16px 16px 16px;
+    font-size: 12px;
+}
+
+.oh-blue{
+    color: #3cb3e0;
 }
 
 .score-instructions h3{
