--- a/formbuilder/edit.css
+++ b/formbuilder/edit.css
@@ -232,7 +232,7 @@ i {
 /**************************************/
 
 .main-container {
-  width: 60vw;
+  width: 75vw;
   max-width: 900px;
   padding: 24px;
   display: flex;
@@ -472,6 +472,7 @@ textarea::placeholder {
   overflow: auto; 
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
+  overflow: hidden;
 }
 
 /* Modal Content/Box */
@@ -480,7 +481,7 @@ textarea::placeholder {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 24px;
   border: 1px solid #888;
-  width: 500px; /* Could be more or less, depending on screen size */
+  width: 600px; /* Could be more or less, depending on screen size */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
