--- a/homework/style.css
+++ b/homework/style.css
@@ -139,7 +139,7 @@ h1 {
     display: block;
     padding: 16px 16px 8px 16px;
     background-color: #d8d8d8;
-    color: #2b2b2b;
+    color: black;
     line-height: 32px;
 }
 
